完成本地chat的连接

--- a/templates/counselor/base.html
+++ b/templates/counselor/base.html
@@ -49,33 +49,10 @@
             </div>
 
             <!-- 会话列表 -->
+            
             <div class="session-list" id="session-list">
-                <span>会话列表</span>
-                <div class="user-item">
-                    <a href="counsel.html" class="nav-link">
-                        <span class="leftOption" id="Option_bed_information">张先生</span>
-                    </a>
-                    <span class="badge">2</span>
-                </div>
-
-                <!-- 示例项 -->
-                <div class="user-item-container">
-                    <a href="counsel.html" class="user-item-content" draggable="false">
-                        <div class="user-item">张先生</div>
-                    </a>
-                    <div class="menu-actions">
-                        <div class="delete-btn" onclick="handleDelete(this)">删除</div>
-                    </div>
-                </div>
                 
-                <div class="user-item-container">
-                    <div class="user-item-content">
-                        <div class="user-item">周小姐</div>
-                    </div>
-                    <div class="menu-actions">
-                        <div class="delete-btn" onclick="handleDelete(this)">删除</div>
-                    </div>
-                </div>
+                
             </div>
         </div>
 
@@ -164,7 +141,7 @@
                         </div>
                     </div>
                 </div>
-                <div class="consultation-records" style="height:24vh">
+                <div class="consultation-records" style="height:28vh;margin-top: 0;">
                     <div class="records-header">
                         <h3>最近完成的咨询</h3>
                         <a href="/counselor/history" class="view-all">查看全部</a>
@@ -188,5 +165,6 @@
     </div>
 </body>
 
-<script src="../static/js/auth/session.js"></script>
+<script src="../static/js/session.js"></script>
+
 </html>
