--- a/templates/counselor/history.html
+++ b/templates/counselor/history.html
@@ -46,18 +46,9 @@
             </div>
 
             <!-- 会话列表 -->
-            <div class="session-list">
+            <div class="session-list"  id="session-list">
                 <span>会话列表</span>
-                <div class="user-item">
-                    <a href="counsel.html" class="nav-link">
-                        <span class="leftOption" id="Option_bed_information">张先生</span>
-                    </a>
-                    <span class="badge">2</span>
-                </div>
-                <div class="user-item">
-                    <span>周小姐</span>
-                    <i class="fas fa-question-circle" style="color: #677489;"></i>
-                </div>
+                
             </div>
         </div>
 
@@ -126,5 +117,5 @@
 </body>
 
 <script type="text/javascript" src="../../static/js/recentlyCompletedCounsel.js"></script>
-
+<script type="module" src="../../static/js/renderSessionList.js"></script>
 </html>
