--- a/templates/supervisor/history.html
+++ b/templates/supervisor/history.html
@@ -38,22 +38,11 @@
                         <span class="leftOption" id="Option_bed_information">首页</span>
                     </a>
                 </div>
-                <div class="nav-item">
-                    <img src="../../static/image/assistanceGrey.png">
-                    <span>求助记录</span>
-                </div>
-
-                <div class="nav-item">
-                    <img src="../../static/image/scheduleGrey.png">
-                    <a href="/supervisor/schedule" class="nav-link">
-                        <span class="leftOption" id="Option_bed_information">排班表</span>
-                    </a>
-                </div>
 
                 <div class="nav-item-activate">
                     <img src="../../static/image/logGreen.png">
                     <a href="/supervisor/history" class="nav-link">
-                        <span class="leftOption" id="Option_bed_information">咨询记录</span>
+                        <span class="leftOption" id="Option_bed_information">求助记录</span>
                     </a>
                 </div>
             </div>
@@ -61,16 +50,7 @@
             <!-- 会话列表 -->
             <div class="session-list">
                 <span>会话列表</span>
-                <div class="user-item">
-                    <a href="counsel.html" class="nav-link">
-                        <span class="leftOption" id="Option_bed_information">咨询师A</span>
-                    </a>
-                    <span class="badge">2</span>
-                </div>
-                <div class="user-item">
-                    <span>咨询师B</span>
-                    <i class="fas fa-question-circle" style="color: #677489;"></i>
-                </div>
+                
             </div>
         </div>
 
