--- a/static/css/Supervisor.css
+++ b/static/css/Supervisor.css
@@ -132,7 +132,7 @@
 }
 
 .supervisor-completedcounsel::after {
-    content: "12353";
+    content: attr(data-value);
     font-size: 2.8rem;
     font-weight: 600;
 }
