--- a/templates/counselor/counsel.html
+++ b/templates/counselor/counsel.html
@@ -4,10 +4,10 @@
 <head>
     <meta charset="UTF-8">
     <title>心理咨询师工作台</title>
-    <link rel="stylesheet" type="text/css" href="../../static/css/LeftBar.css">
-    <link rel="stylesheet" type="text/css" href="../../static/css/RightBar.css">
-    <link rel="stylesheet" type="text/css" href="../../static/css/Counsel.css">
-    <link rel="stylesheet" type="text/css" href="../../static/css/Modal.css">
+    <link rel="stylesheet" type="text/css" href="/static/css/LeftBar.css">
+    <link rel="stylesheet" type="text/css" href="/static/css/RightBar.css">
+    <link rel="stylesheet" type="text/css" href="/static/css/Counsel.css">
+    <link rel="stylesheet" type="text/css" href="/static/css/Modal.css">
     
 </head>
 
@@ -30,13 +30,13 @@
             <!-- 导航菜单 -->
             <div class="nav-menu">
                 <div class="nav-item">
-                    <img src="../../static/image/homepageGrey.png">
+                    <img src="/static/image/homepageGrey.png">
                     <a href="/counselor/base" class="nav-link">
                         <span class="leftOption" id="Option_bed_information">首页</span>
                     </a>
                 </div>
                 <div class="nav-item">
-                    <img src="../../static/image/logGrey.png">
+                    <img src="/static/image/logGrey.png">
                     <a href="/counselor/history" class="nav-link">
                         <span class="leftOption" id="Option_bed_information">咨询记录</span>
                     </a>
@@ -45,18 +45,9 @@
             </div>
 
             <!-- 会话列表 -->
-            <div class="session-list">
+            <div class="session-list"  id="session-list">
                 <span>会话列表</span>
-                <div class="user-item-activate">
-                    <a href="counselCarring.html" class="nav-link">
-                        <span class="leftOption" id="Option_bed_information">张先生</span>
-                    </a>
-                    <span class="badge">2</span>
-                </div>
-                <div class="user-item">
-                    <span>周小姐</span>
-                    <i class="fas fa-question-circle" style="color: #677489;"></i>
-                </div>
+                
             </div>
         </div>
 
@@ -64,7 +55,7 @@
             <!-- 上方导航栏 -->
             <div class="navBar">
                 <div class="logo">
-                    <img src="../../static/image/icon.png">
+                    <img src="/static/image/icon.png">
                 </div>
                 <h2>心理咨询云桥 Counseling Cloud Bridge</h2>
             </div>
@@ -80,8 +71,8 @@
                             </div>
                             <div class="user-details">
                                 <div class="user-meta">
-                                    <div class="user-name">张先生</div>
-                                    <div class="user-phone">157665***89</div>
+                                    <div class="user-name" id="user-name">张先生</div>
+                                    <div class="user-phone" id="user-phone">157665***89</div>
                                 </div>
                                 <div class="consult-status">
                                     <span class="status-icon">●</span>
@@ -92,13 +83,12 @@
 
                         <div class="counsult-records">
 
-                            <h2 id="counsult-records-header">正在咨询中</h2>
-                            <div class="consult-duration">
+                            <h2 id="counsult-records-header" >正在咨询中</h2>
+                            <div class="consult-duration" id="consult-process-content">
                                 <h3>已咨询用时</h3>
                                 <span>00:00:00</span>
                                 <h3 style="color:rgb(126, 154, 254)">对方正在输入中……</h3>
                             </div>
-
                             <div class="consult-evaluations" id="consult-evaluations-content" style="display:none">
                                 <div class="client-evaluation">
                                     <h3>咨询者评价</h3>
@@ -116,11 +106,11 @@
                         
                         <div class="action-buttons">
                             <div class="button-container">
-                                <img class="button-image" id="requestIcon" src="../../static/image/lightGrey.png">
+                                <img class="button-image" id="requestIcon" src="/static/image/lightGrey.png">
                                 <button class="btn" id = "requestHelp">请求督导</button>
                             </div>
                             <div class="button-container">
-                                <img class="button-image" src="../../static/image/tickGrey.png">
+                                <img class="button-image" src="/static/image/tickGrey.png">
                                 <button class="btn"  id = "endCounsel">结束咨询</button>
                             </div>
                             
@@ -130,32 +120,13 @@
                     <!-- 聊天内容区域 -->
                     <div class="chat-content">
                         <div class="chat-messages" id="messageContainer">
-                            <!-- 消息示例 -->
-                            <div class="message-line">
-                                <div class="message-avatar">
-                                    <img alt="用户头像">
-                                </div>
-                                <div class="message user-message">
-                                    <div>您好，请问您有什么需要咨询的内容？</div>
-                                    <span class="timestamp">2023/12/01 10:00:00</span>
-                                </div>
-                            </div>
-                            <div class="message-line">
-
-                                <div class="message system-message">
-                                    <div>您好，请问您有什么需要咨询的内容？</div>
-                                    <span class="timestamp">2023/12/01 10:00:00</span>
-                                </div>
-                                <div class="message-avatar">
-                                    <img alt="用户头像">
-                                </div>
-                            </div>
+                            
                         </div>
 
                         <div class="chat-tools">
-                            <div><img src="../../static/image/mic.png"> </div>
-                            <div><img src="../../static/image/moji.png"> </div>
-                            <div><img src="../../static/image/album.png"> </div>
+                            <div><img src="/static/image/mic.png"> </div>
+                            <div><img src="/static/image/moji.png"> </div>
+                            <div><img src="/static/image/album.png"> </div>
                         </div>
 
                         <div class="chat-footer">
@@ -233,14 +204,14 @@
             <div class="modal-subtitle">为这次心理咨询做出评价</div>
 
             <div class="modal-line">咨询类型</div>
-            <input class="modal-input">
+            <input class="modal-input" id="counsel-type">
 
             <div class="modal-line">评价</div>
-            <textarea class="modal-textarea" placeholder="输入消息..." id="messageInput" rows="1"></textarea>
+            <textarea class="modal-textarea" placeholder="输入消息..." id="counsel-evaluation" rows="1"></textarea>
 
             <div class="modal-button-line">
                 <button class="modal-btn"  id="evaluation-comfirm">确定</button>
-                <button class="modal-btn">取消</button>
+                <button class="modal-btn"  id="evaluation-cancel">取消</button>
             </div>
         </div>
     </div>
@@ -382,7 +353,8 @@
 
 
 </body>
-<script type="text/javascript" src="../../static/js/consultantDuration.js"></script>
-<script type="module" src="../../static/js/Chat.js"></script>
+
+<script type="module" src="/static/js/Chat.js"></script>
+<script type="module" src="/static/js/renderSessionList.js"></script>
 
 </html>
